...

    Scaffold(floatingActionButton = {
        FloatingActionButton(
            onClick = { onEvent(AddEditNoteEvent.SaveNote) },
            backgroundColor = MaterialTheme.colors.primary
        ) {
            Icon(imageVector = Icons.Default.Save, contentDescription = "Save")
        }
    }, scaffoldState = scaffoldState) {
        Column(
            modifier = Modifier
                .fillMaxSize()
                .background(noteBackgroundAnimatable.value)
...
